feat(policy): configure REPEP per campaign
